<resources>
    <string name="app_name">Welearn</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="profile">Profile</string>
    <string name="nama">Nama</string>
    <string name="score">Score</string>
    <string name="logout">Logout</string>
    <string name="level">Level ke :</string>
    <string name="soal">Soal ke</string>
    <string name="soallevel">Soal</string>
    <string name="soalhuruf">soalnya</string>
    <string name="reset"></string>
    <string name="button_volume_desc"></string>
    <string name="samadengan">=</string>
    <string name="tambah">+</string>
    <string name="kurang">-</string>
    <string name="button_back_desc"></string>
    <string name="pict_lion_desc"></string>
    <string name="button_reset_desc"></string>
    <string name="button_send_desc"></string>
    <string name="soalangka">soalnya</string>
    <string name="benar">Jawaban Benar</string>
    <string name="true_desc"></string>
    <string name="username">Username</string>
    <string name="jenis_kelamin">Jenis Kelamin</string>
    <string name="email">Email</string>
    <string name="scorehuruf">Score Huruf</string>
    <string name="scoreangka">Score Angka</string>
    <string name="question">Soal</string>
    <string name="no">no</string>
    <string name="score_huruf">Score</string>
    <string name="score_angka">Score</string>
    <string name="string_angka">soal</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>