<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBG"
    tools:context=".Activity.AngkaLv3Activity">

    <ImageView
        android:id="@+id/back"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/button_back_desc"
        android:src="@drawable/back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints"></ImageView>

    <TextView
        android:id="@+id/levelangka"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/level"
        android:textColor="@color/tosca"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"></TextView>

    <TextView
        android:id="@+id/soalangka"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:text="@string/soal"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/levelangka"
        tools:ignore="MissingConstraints"></TextView>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_soalangka"
        android:layout_width="384dp"
        android:layout_height="55dp"
        android:layout_marginTop="10dp"
        app:cardBackgroundColor="@color/colorteksAngka"
        app:cardCornerRadius="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/soalangka"
        tools:ignore="MissingConstraints">

        <ImageView
            android:id="@+id/speaker"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/button_volume_desc"
            android:src="@drawable/speakerangka"></ImageView>

        <TextView
            android:id="@+id/soalnya"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:gravity="center"
            android:text="@string/soalhuruf"
            android:textColor="@color/colorAngka"
            android:textSize="18sp"
            android:textStyle="bold"></TextView>
    </androidx.cardview.widget.CardView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/padsoalangka"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/card_soalangka"
        tools:ignore="MissingConstraint">

        <androidx.cardview.widget.CardView
            android:id="@+id/card_soalangka1"
            android:layout_width="250dp"
            android:layout_height="210dp"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/borderijo"
            app:cardCornerRadius="15dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/isi_soal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/string_angka"
                android:textColor="@color/colorAngka"
                android:textSize="130sp"
                android:textStyle="bold" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/samadengan"
            android:layout_width="30dp"
            android:layout_height="250dp"
            android:layout_marginStart="18dp"
            android:layout_marginLeft="18dp"
            android:layout_marginEnd="38dp"
            android:layout_marginRight="38dp"
            android:gravity="center"
            android:text="@string/samadengan"
            android:textColor="@color/colorAngka"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/padsoalangka1"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="InvalidId"></TextView>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout4"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="400dp"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout">


        <com.williamww.silkysignature.views.SignaturePad
            android:id="@+id/padjawabangka1"
            android:layout_width="250dp"
            android:layout_height="230dp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp"
            android:background="@drawable/borderijo"
            app:layout_constraintBottom_toTopOf="@+id/card_reset"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
            app:layout_constraintVertical_bias="0.25"
            tools:ignore="MissingConstraints"></com.williamww.silkysignature.views.SignaturePad>

        <androidx.cardview.widget.CardView
            android:id="@+id/card_reset"
            android:layout_width="207dp"
            android:layout_height="56dp"
            android:layout_marginEnd="200dp"
            android:layout_marginRight="200dp"
            app:cardBackgroundColor="@color/colorButton"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="MissingConstraints">

            <ImageView
                android:id="@+id/resetangka"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/button_reset_desc"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:src="@drawable/reset"></ImageView>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/card_submit"
            android:layout_width="207dp"
            android:layout_height="56dp"
            app:cardBackgroundColor="@color/tosca"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/button_reset"
            tools:ignore="MissingConstraints">

            <ImageView
                android:id="@+id/submit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/button_send_desc"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:src="@drawable/check"></ImageView>
        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>




